--- a/Deposito/src/app/pages/componentes/combo-tipo-equipo/combo-tipo-equipo.component.html
+++ b/Deposito/src/app/pages/componentes/combo-tipo-equipo/combo-tipo-equipo.component.html
@@ -1,12 +1,20 @@
 <div class="col-lg-12">
-    <div class="control-group">
-        <div class="form-group controls">
-            <label>Seleccione tipo de equipo</label>
-            <select (ngModelChange)="capturar($event)" name="proveedor" required [(ngModel)]="item" [compareWith]="compareFnPer"
-                class="form-control form-sm" required>
-                <option *ngFor="let item of items" [ngValue]="item">{{item.nombre}}
-                </option>
-            </select>
-        </div>
+  <div class="control-group">
+    <div class="form-group controls">
+      <label>Seleccione tipo de equipo</label>
+      <select
+        (ngModelChange)="capturar($event)"
+        name="proveedor"
+        required
+        [(ngModel)]="item"
+        [compareWith]="compareFnPer"
+        class="form-control form-sm"
+        required
+      >
+        <option *ngFor="let item of items" [ngValue]="item">
+          {{ item.nombre }}
+        </option>
+      </select>
     </div>
+  </div>
 </div>
