--- a/Deposito/src/app/pages/lst/lst-orden-compra/lst-orden-compra.component.html
+++ b/Deposito/src/app/pages/lst/lst-orden-compra/lst-orden-compra.component.html
@@ -1,88 +1,119 @@
 <div class="overlay" *ngIf="load">
-    <app-wg-cargando></app-wg-cargando>
-  </div>
-  <div >
-    <div *ngIf="!load">
-<div class="card border-info">
-    <div class="card-body">
+  <app-wg-cargando></app-wg-cargando>
+</div>
+<div>
+  <div *ngIf="!load">
+    <div class="card border-info">
+      <div class="card-body">
         <div class="card-header">
-            <b> Listado de {{ entity }} </b>
-            &nbsp;
-            <a title="Agregar Nuevo" placement="right" (click)="linkear(0)" class="btn btn-primary btn-redondo">
-                <i class="fa fa-plus" aria-hidden="true"></i>
-            </a>
+          <b> Listado de {{ entity }} </b>
+          &nbsp;
+          <a
+            title="Agregar Nuevo"
+            placement="right"
+            (click)="linkear(0)"
+            class="btn btn-primary btn-redondo"
+          >
+            <i class="fa fa-plus" aria-hidden="true"></i>
+          </a>
         </div>
-  
+
         <app-fil-orden-compra (filter)="doFound($event)">
         </app-fil-orden-compra>
-  
-        <div class="row {{scroll(items)}}">
-            <table id="listacompra" *ngIf="items.length > 0" class="table table-striped table-inverse text-center">
-                <thead class="table-light">
-                    <tr>
-                        <th>Orden Compra</th>
-                        <th>Licitación</th>
-                        <th>Proveedor</th>
-                        <th>Fecha Compra</th>
-                        <th>Pago</th>
-                        <th>Tipo Compra</th>
-                        <th *ngIf="!exportar">Acción</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let item of items">
-                        <td>{{ item.ordenCompraNum}}</td>
-                        <td>{{ item.nroLicitacion }}</td>
-                        <td>{{ item.proveedor.nombre| uppercase}}</td>
-                        <td>{{ item.fechaOrdenCompra | date: "dd/MM/yyyy"}}</td>
-                        <td>{{ item.fechaPago| date: "dd/MM/yyyy"}}</td>
-                        <td>{{ tipoCompra(item.tipoCompra)}}</td>
-                          <td *ngIf="!exportar">
-                            <button type="button" title="Modificar" placement="top" show-delay="10"
-                                (click)="linkear(item.id)" class="btn btn-secondary btn-sm">
-                                <i class="fas fa-edit"></i>
-                            </button>
-                          &nbsp;
-                          <button type="button" title="Agregar detalle compra" placement="top" show-delay="10"
-                                (click)="linkearDetalle(item.id)" class="btn btn-warning btn-sm">
-                                <i class="fas fa-download"></i>
-                            </button>
-                           
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+
+        <div class="row {{ scroll(items) }}">
+          <table
+            id="listacompra"
+            *ngIf="items.length > 0"
+            class="table table-striped table-inverse text-center"
+          >
+            <thead class="table-light">
+              <tr>
+                <th>Orden Compra</th>
+                <th>Licitación</th>
+                <th>Proveedor</th>
+                <th>Fecha Compra</th>
+                <th>Pago</th>
+                <th>Tipo Compra</th>
+                <th *ngIf="!exportar">Acción</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let item of items">
+                <td>{{ item.ordenCompraNum }}</td>
+                <td>{{ item.nroLicitacion }}</td>
+                <td>{{ item.proveedor.nombre | uppercase }}</td>
+                <td>{{ item.fechaOrdenCompra | date: "dd/MM/yyyy" }}</td>
+                <td>{{ item.fechaPago | date: "dd/MM/yyyy" }}</td>
+                <td>{{ tipoCompra(item.tipoCompra) }}</td>
+                <td *ngIf="!exportar">
+                  <button
+                    type="button"
+                    title="Modificar"
+                    placement="top"
+                    show-delay="10"
+                    (click)="linkear(item.id)"
+                    class="btn btn-secondary btn-sm"
+                  >
+                    <i class="fas fa-edit"></i>
+                  </button>
+                  &nbsp;
+                  <button
+                    type="button"
+                    title="Agregar detalle compra"
+                    placement="top"
+                    show-delay="10"
+                    (click)="linkearDetalle(item.id)"
+                    class="btn btn-warning btn-sm"
+                  >
+                    <i class="fas fa-clipboard-check"></i>
+                  </button>
+                  &nbsp;
+                  <button
+                    type="button"
+                    title="Reporte de Compra"
+                    (click)="linkearFaltante(item.id)"
+                    placement="top"
+                    show-delay="10"
+                    class="btn btn-info btn-sm"
+                  >
+                    <i class="fa fa-th-list" aria-hidden="true"></i>
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <div
-      *ngIf="items.length === 0"
-      class="alert alert-primary alert-dismissible fade show"
-      role="alert"
+          *ngIf="items.length === 0"
+          class="alert alert-primary alert-dismissible fade show"
+          role="alert"
+        >
+          <button
+            type="button"
+            class="close"
+            data-dismiss="alert"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+            <span class="sr-only">Salir</span>
+          </button>
+          <strong>No hay datos</strong>
+        </div>
+      </div>
+    </div>
+    <br />
+    <button
+      *ngIf="items.length > 0"
+      (click)="exportTableToExcel('listacompra', 'compra')"
+      class="btn btn-outline-success flotante"
     >
-      <button
-        type="button"
-        class="close"
-        data-dismiss="alert"
-        aria-label="Close"
-      >
-        <span aria-hidden="true">&times;</span>
-        <span class="sr-only">Salir</span>
-      </button>
-      <strong>No hay datos</strong>
-    </div>
-    </div>
-  </div>
-  <br>
-  <button *ngIf="items.length > 0"
-    (click)="exportTableToExcel('listacompra', 'compra')"
-    class="btn btn-outline-success flotante"
-  >
-  <i class="far fa-file-excel"></i>
-    Descargar Excel
-  </button>
+      <i class="far fa-file-excel"></i>
+      Descargar Excel
+    </button>
 
-  
-  <!-- Modal -->
-  <!-- <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+    <!-- Modal -->
+    <!-- <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -97,4 +128,5 @@
         </div>
     </div>
   </div> -->
+  </div>
 </div>
